<resources>
    <string name="app_name">mycafe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="category">Категории</string>
    <string name="dishmenu_title">Меню</string>
    <string name="orders_title">Заказы</string>
    <string name="table_title">Столы</string>
    <string name="dishesadd_title">Добавление блюда</string>
    <string name="saveok_title">Запись сохранена в базе данных</string>
    <string name="description">Примечание</string>
    <string name="save_category">Сохранение категории</string>
    <string name="category_name">Название категории*</string>
    <string name="weight">Вес</string>
    <string name="price">Цена*</string>
    <string name="dish">Блюдо</string>
    <string name="category_picture_description">Category picture</string>
    <string name="dish_name">Название блюда*</string>
    <string name="hint_cost">Цена</string>
    <string name="hint_weight">Вес</string>
    <string name="hint_description">Примечание</string>
    <string name="add_category">Добавить категорию</string>
    <string name="dish_picture">Dish picture</string>
    <string name="save_dish">Save dish</string>
    <string name="add_dish">Add dish</string>
    <string name="button_menu">Меню</string>
    <string name="button_category_list">Список категорий</string>
    <string name="button_tables">Столы</string>
    <string name="on_stop_list">Находится в стоп листе!</string>
    <string name="list_element_delete_button">Кнопка удаления</string>
    <string name="list_element_add_stop_button">Кнопка добавления в стоп-лист</string>
    <string name="list_element_edit_category_button">Кнопка редактирования категории</string>
    <string name="list_element_remove_stop_button">Кнопка убирающая из стоп-листа</string>
    <string name="required_field">*Поля обязательны для заполнения</string>
    <string name="required_fields_is_blank">Введите обязательные поля</string>
    <string name="enter_category_name">Введите название категории</string>
    <string name="enter_dish_name">Введите название блюда</string>
    <string name="enter_price">Введите цену</string>
    <string name="enter_customer_name">Введите имя покупателя</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="enter_address">Введите адрес</string>
    <string name="enter_dish_descripton">Введите описание блюда</string>
    <string name="dish_photo">Фото блюда</string>
    <string name="weight_not_specified">0</string>
    <string name="header_add_photo">Редактирование фото</string>
    <string name="add_photo_from_gallery">Выбрать из галереи</string>
    <string name="add_photo_from_camera">Открыть камеру</string>
    <string name="delete_photo">Удалить изображение</string>
    <string name="want_to_delete_dish">Удалить блюдо из списка?</string>
    <string name="want_to_delete_category">Удалить категорию из списка?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="in_room_title">В зале</string>
    <string name="take_away_title">На вынос</string>
    <string name="delevery_title">Доставка</string>
    <string name="customer_name">Покупатель имя</string>
    <string name="phone_number_title">Телефон</string>
    <string name="customeraddresstitle">Адрес доставки</string>
    <string name="time_title">Время</string>
    <string name="newdeliverytitle">Новая доставка</string>
    <string name="client_title">Клиент</string>
    <string name="order_title">Заказ</string>
    <string name="date_title">Дата</string>
    <string name="add_dish_to_order">Добавить блюдо</string>
    <string name="order_type_delivery">Доставка</string>
    <string name="payed">Оплачен</string>
    <string name="not_payed">Не оплачен</string>
    <string name="order_date_time">Время: %1$s</string>
    <string name="order_cost">Сумма: %1$s</string>
    <string name="order_type_takeaway">Самовывоз</string>
    <string name="order_type_table">Стол %1$s</string>
    <string name="total">Итого:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="new_takeaway_order">Самовывоз</string>
    <string name="near_time">На ближайшее время</string>
    <string name="ok_title">Готово</string>
    <string name="table_name_title">Название стола</string>
    <string name="add_table_title">Добавление стола</string>
    <string name="add">добавить</string>
    <string name="text_category_name">Введите название категории</string>
</resources>