<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_categorylist">

    <fragment
        android:id="@+id/nav_tablelist"
        android:name="com.cafeapp.mycafe.frameworks.view.tablelist.TableListFragment"
        android:label="@string/table_title"
        tools:layout="@layout/fragment_tablelist" />

    <fragment
        android:id="@+id/nav_categorylist"
        android:name="com.cafeapp.mycafe.frameworks.view.categorylist.CategoryListFragment"
        android:label="@string/dishmenu_title"
        tools:layout="@layout/fragment_categorylist" />

    <fragment
        android:id="@+id/nav_orderlist"
        android:name="com.cafeapp.mycafe.frameworks.view.orderlist.OrderListFragment"
        android:label="@string/orders_title"
        tools:layout="@layout/fragment_orderlist" />

    <fragment
        android:id="@+id/nav_categoryadd"
        android:name="com.cafeapp.mycafe.frameworks.view.categoryadd.CategoryAddFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_addcategory" />

    <fragment
        android:id="@+id/nav_dishesadd"
        android:name="com.cafeapp.mycafe.frameworks.view.dishesadd.DishesAddFragment"
        android:label="@string/dishesadd_title"
        tools:layout="@layout/fragment_dishesadd" />

    <fragment
        android:id="@+id/nav_disheslist"
        android:name="com.cafeapp.mycafe.frameworks.view.dishlist.DishListFragment"
        android:label="Список блюд"
        tools:layout="@layout/fragment_disheslist" />
</navigation>