<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/default_padding"
    android:paddingEnd="@dimen/default_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_takeaway_client_data_customerNameTIL"
        style="@style/customerDataField"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_takeaway_client_data_customerNameTIT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/customer_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_takeaway_client_data_customerPhoneTIL"
        style="@style/customerDataField"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_takeaway_client_data_customerPhoneTIT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number_title"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/fragment_takeaway_client_data_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/near_time" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fragment_takeaway_client_data_date_time_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginDefault"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_takeaway_client_data_dateTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginDefault"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_takeaway_client_data_dateTIT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/date_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_takeaway_client_data_timeTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginDefault"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_takeaway_client_data_timeTIT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/time_title" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>