<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/add_category_padding"
    tools:context=".frameworks.view.categoryadd.CategoryAddFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/category_add_textfield_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryNameTIT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/category_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/category_add_textfield_margin_top">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionTIT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttons_height"
        android:orientation="horizontal">

       <Button
           android:id="@+id/white_button"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:layout_margin="@dimen/add_category_color_margin"
           android:backgroundTint="@color/white"/>
        <Button
            android:id="@+id/yellow_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:minHeight="40dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/add_category_color_margin"
            android:backgroundTint="@color/yellow" />
        <Button
            android:id="@+id/green_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/add_category_color_margin"
            android:backgroundTint="@color/green"/>
        <Button
            android:id="@+id/pink_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/add_category_color_margin"
            android:backgroundTint="@color/pink"/>
        <Button
            android:id="@+id/red_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/add_category_color_margin"
            android:backgroundTint="@color/red"/>
        <Button
            android:id="@+id/blue_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/add_category_color_margin"
            android:backgroundTint="@color/blue"/>
        <Button
            android:id="@+id/violet_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/add_category_color_margin"
            android:backgroundTint="@color/violet"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveCategoryFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/save_category" />

</LinearLayout>